# project_card

./: .flake8  README.md  mylog.txt  pyproject.toml
data/: test.json
src/: csv_xlsx.py  decorators.py  external_api.py  filters.py  generators.py  main.py  masks.py  processing.py  reading_files.py  utils.py  widget.py
tests/: test_code.py  tests.py
