[tool.poetry]
name = "domasha-bespoludin-poetry"
version = "0.1.0"
description = ""
authors = ["A1 <F5654521@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[tool.black]
# максимальная длина строки
line-length = 119

[tool.isort]
# максимальная длина строки
line_length = 119



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
